[gd_scene load_steps=8 format=3 uid="uid://dujlif0emy2tw"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_1xsmw"]
[ext_resource type="FontFile" uid="uid://icbcvxvk8ya7" path="res://assets/font_digital_disco/DigitalDisco.ttf" id="2_ye356"]
[ext_resource type="Texture2D" uid="uid://b42xihxaad1m4" path="res://assets/Edinnu_UI_asset_pack/Dialogue_plates/Plate (57).png" id="3_2ft3u"]
[ext_resource type="Texture2D" uid="uid://df8hrtddy82da" path="res://assets/Edinnu_UI_asset_pack/Dialogue_plates/Plate (44).png" id="4_vxk5a"]
[ext_resource type="FontFile" uid="uid://dscvja3jdb2r5" path="res://assets/font_digital_disco/DigitalDisco-Thin.ttf" id="5_ufkrq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qo32m"]
bg_color = Color(0.6, 0.6, 0.6, 0.392157)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2i1cf"]
bg_color = Color(1, 0, 0.196078, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_1xsmw")

[node name="HealthReferenceRect" type="ReferenceRect" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 704.0

[node name="ProgressBar" type="ProgressBar" parent="HealthReferenceRect"]
layout_mode = 0
offset_left = 24.0
offset_top = 72.0
offset_right = 104.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("2_ye356")
theme_override_font_sizes/font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_qo32m")
theme_override_styles/fill = SubResource("StyleBoxFlat_2i1cf")
fill_mode = 3

[node name="TextureRect" type="TextureRect" parent="HealthReferenceRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 112.0
offset_bottom = 616.0
texture = ExtResource("3_2ft3u")

[node name="StatsReferenceRect" type="ReferenceRect" parent="."]
offset_left = 1536.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 696.0

[node name="TextureRect" type="TextureRect" parent="StatsReferenceRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 304.0
offset_bottom = 608.0
texture = ExtResource("4_vxk5a")

[node name="AttackRefRect" type="ReferenceRect" parent="StatsReferenceRect/TextureRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 56.0
offset_right = 256.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="StatsReferenceRect/TextureRect/AttackRefRect"]
layout_mode = 0
offset_left = 4.0
offset_right = 220.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_ye356")
theme_override_font_sizes/font_size = 32
text = "Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackRangeLabel" type="Label" parent="StatsReferenceRect/TextureRect/AttackRefRect"]
layout_mode = 0
offset_left = 24.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("5_ufkrq")
theme_override_font_sizes/font_size = 28
text = "27 - 32"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelRefRect" type="ReferenceRect" parent="StatsReferenceRect/TextureRect"]
offset_left = 32.0
offset_top = 144.0
offset_right = 256.0
offset_bottom = 216.0

[node name="Label" type="Label" parent="StatsReferenceRect/TextureRect/LevelRefRect"]
layout_mode = 0
offset_left = 4.0
offset_right = 220.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_ye356")
theme_override_font_sizes/font_size = 32
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="StatsReferenceRect/TextureRect/LevelRefRect"]
layout_mode = 0
offset_left = 24.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("5_ufkrq")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpRefRect" type="ReferenceRect" parent="StatsReferenceRect/TextureRect"]
offset_left = 32.0
offset_top = 232.0
offset_right = 256.0
offset_bottom = 304.0

[node name="Label" type="Label" parent="StatsReferenceRect/TextureRect/ExpRefRect"]
layout_mode = 0
offset_left = 4.0
offset_right = 220.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_ye356")
theme_override_font_sizes/font_size = 32
text = "Experience"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpLabel" type="Label" parent="StatsReferenceRect/TextureRect/ExpRefRect"]
layout_mode = 0
offset_left = 24.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("5_ufkrq")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1
